I change in the .env also

--- a/node/.env
+++ b/node/.env
@@ -10,10 +10,10 @@ PORT=3000
 TOKEN_SECRET=bcjueuicbiuavwciu9y9hwqc
 
 # Database connection
-DB_HOST=localhost
-DB_USER=Meanleap Ha
+DB_HOST=127.0.0.1
+DB_USER=Meanleap_Ha
 DB_PASSWORD=Leap2005333
-DB_NAME=remindme
+DB_NAME=u523916255_remindme
 DB_WAIT=true
 DB_LIMIT=10
 DB_PORT=3306
