--- a/node/.env
+++ b/node/.env
@@ -10,7 +10,7 @@ PORT=3000
 TOKEN_SECRET=bcjueuicbiuavwciu9y9hwqc
 
 # Database connection
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_USER=Meanleap_Ha
 DB_PASSWORD=Leap2005333
 DB_NAME=u523916255_remindme
