not using ip fear of being attack for no reason

--- a/node/.env
+++ b/node/.env
@@ -10,7 +10,7 @@ PORT=3000
 TOKEN_SECRET=bcjueuicbiuavwciu9y9hwqc
 
 # Database connection
-DB_HOST=82.197.82.130
+DB_HOST=srv1777.hstgr.io
 DB_USER=Meanleap_Ha
 DB_PASSWORD=Leap2005333
 DB_NAME=u523916255_remindme
