--- a/node/.env
+++ b/node/.env
@@ -11,7 +11,7 @@ TOKEN_SECRET=bcjueuicbiuavwciu9y9hwqc
 
 # Database connection
 DB_HOST=srv1777.hstgr.io
-DB_USER=Meanleap_Ha
+DB_USER=u523916255_Meanleap_Ha
 DB_PASSWORD=Leap2005333
 DB_NAME=u523916255_remindme
 DB_WAIT=true
